# lgr_microservice_project

./: Cargo.toml  README.md
proto/: authentication.proto
src/auth-service/: auth.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
