[package]
name = "lgr_microservice_project"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
prost = "0.13.5"
rand_core = { version = "0.6.4", features = ["std"] }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.12.3"
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
